@@ -8,6 +8,8 @@ plots
 .. autosummary::
    :toctree: generated
 
+   center_colorbar
+   channels
    cmap2act
    cmap2c3g
    cmap2cpt
@@ -16,7 +18,6 @@ plots
    cmap_from_act
    cmap_from_txt
    colors2cmap
-   center_colorbar
    figsize
    get_available_styles
    get_subplot_arrangement
